Add file handling and deleting

--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,11 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
+                <executions><execution>
+                    <goals><goal>java</goal></goals>
+                </execution></executions>
                 <configuration>
-                    <mainClass>Bot</mainClass>
+                    <mainClass>MessageListener</mainClass>
                 </configuration>
             </plugin>
         </plugins>
